# IOT653W

./: .gitignore  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  test_climatiq_fallback.py
backend/app/auth/: __init__.py  models.py  schemas.py  services.py  utils.py
backend/app/core/: config.py
backend/app/routers/: api.py  auth.py  example.py
backend/app/services/: airport_agent.py  airport_prompt.py  airport_transports.py  airports.py  city_center_prompt.py  city_fare_prompt.py  city_fares.py  climatiq.py  mongodb.py  ollama.py  tavily.py  terminal_transfers_prompt.py  transport_prompt.py
backend/app/utils/: __init__.py
backend/scripts/: verify_airports.py
backend/test/: test_main.py
backend/tests/: conftest.py  test_auth_flow.py  test_climatiq_fallback.py
frontend/: .eslintrc.js  App.new.tsx  App.new.v2.tsx  App.new.v3.tsx  App.tsx  CODE_QUALITY.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  TESTING.md  index.html  jest.config.js  jest.setup.js  main.tsx  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.mjs  vitest.config.ts  vitest.setup.js
frontend/__tests__/e2e/: userJourney.test.tsx
frontend/__tests__/integration/: navigation.test.tsx  search.test.tsx
frontend/components/: AccountPage.tsx  InsightsPage.tsx  ResultsPage.tsx  TerminalTransfersPage.tsx  TransfersPage.tsx
frontend/components/__tests__/: NewInsightsPage.test.tsx  TerminalTransfersPage.test.tsx  TransfersPage.sorting.test.tsx  (+1 more)
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/nginx/: default.conf.template
frontend/public/: config.template.js
frontend/src/: App.tsx  index.css
frontend/styles/: globals.css
frontend/types/: index.ts  routes.ts
frontend/utils/: airportUtils.ts  api.ts  cn.ts  duration.ts  mockData.ts  timeUtils.ts  transportUtils.ts
server/: index.js  package.json
(+54 files in other folders)
